trunk/Archive2/6a/8af1d1ccada558/output
main.cpp:44:3: error: static_assert failed "!!"
  static_assert (has_member_f<D, int&>::value, "!!");
  ^              ~~~~~~~~~~~~~~~~~~~~~~~~~~~~
1 error generated.
